--- a/GerenciadorCondominios/appsettings.json
+++ b/GerenciadorCondominios/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": { // String de conexão com o Database
+    "ConexaoDB" : "Server=(localdb)\\mssqllocaldb;Database=GerenciadorCondominiosDB;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
