--- a/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
+++ b/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
@@ -6,8 +6,12 @@
 
   <ItemGroup>
     <Folder Include="Interface\" />
-    <Folder Include="Mapeamentos\" />
     <Folder Include="Repositorios\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
